login page updated.

--- a/app/views/login.tpl.html
+++ b/app/views/login.tpl.html
@@ -21,7 +21,7 @@
               </div> -->
               <div class="box-static box-border-top padding-30">
                 <div class="box-title margin-bottom-30">
-                  <img id="profile-img" class="profile-img-card" src="images/logo.png"  style="width: 30%;margin-top: -84px;" />
+                  <!-- <img id="profile-img" class="profile-img-card" src="images/logo.png"  style="width: 30%;margin-top: -84px;" /> -->
                 </div>
                 <form class="nomargin" method="post" action="#" autocomplete="off">
                   <div class="clearfix">
